# MINOS_simulation

./: CMakeCache.txt  CMakeLists.txt  MINOS_sim  MINOS_sim.cc  Makefile  README.docx  cmake_install.cmake  currentEvent.rndm  result  run_nothing.mac
Analysis_Clem/: Makefile_simu_Newclust  README  convtree.C  minos_simu_Newclusterfind.cpp  plotvertexHoughNew.C
Drift/: DriftRings  DriftRings.cxx  DriftRingsTest  DriftRingsTest.cxx  GNUmakefile
Inputs/: ConfigFile.txt~  ConfigFileBeam.txt  ConfigFileBeam.txt~  ConfigFileIn.txt~  ConfigFileRings.txt  ConfigFileRings.txt~  ConfigFileRingsSame.txt~  ConfigFileRingsSameB4T.txt  ConfigFileSetup.txt  ConfigFileSetup.txt~  ConfigFileSquare.txt~  ConfigFileSquareDouble.txt~  generatexsec.C  xsec_K.root
include/: ExN03DetectorConstruction.hh  ExN03DetectorConstruction.hh~  ExN03EventAction.hh  ExN03EventAction.hh~  ExN03PhysicsList.hh  ExN03PhysicsList.hh~  ExN03PrimaryGeneratorAction.hh  ExN03PrimaryGeneratorAction.hh.bkp  ExN03PrimaryGeneratorAction.hh.mod  ExN03PrimaryGeneratorAction.hh~  ExN03ROOTuple.hh  ExN03ROOTuple.hh~  ExN03RunAction.hh  ExN03RunAction.hh~  ExN03SteppingAction.hh~  ExN03TrackingAction.hh~  MinosModularPhysicsList.hh  RecorderBase.hh  RecorderBase.hh~
include_server/: ExN03DetectorConstruction.hh  ExN03EventAction.hh  ExN03PrimaryGeneratorAction.hh  ExN03ROOTuple.hh  ExN03RunAction.hh  ExN03SteppingAction.hh  ExN03TrackingAction.hh  RecorderBase.hh
lib/: .libsimclem_dict.cc  .libsimclem_dict.h  ExN03BeamIn.cxx  ExN03BeamIn.hh  ExN03BeamInDict.cxx  ExN03BeamInDict.h  ExN03Datai.cxx  ExN03Datai.hh  ExN03DataiDict.cxx  ExN03DataiDict.h  ExN03DataoDictRings.cxx  ExN03DataoDictRings.h  ExN03DataoRings.cxx  ExN03DataoRings.hh  ExN03Setup.cxx  ExN03Setup.hh  ExN03SetupDict.cxx  ExN03SetupDict.h  GNUmakefileBeamIn  GNUmakefileDatai  GNUmakefileDataoRings  GNUmakefileSetup  Makefile  Makefile_org  Makefile_tanix  TMinosClust.cpp  TMinosClust.h  TMinosHough.cpp  TMinosHough.h  TMinosResult.cpp  TMinosResult.h  TMinosTPCSimData.cpp  TMinosTPCSimData.h  TMinosTrack.cpp  TMinosTrack.h  linkdef.h  makeall.csh
src/: #ExN03DetectorConstruction.cc#  ExN03DetectorConstruction.cc~  ExN03DetectorConstruction_anna.cc  ExN03EventAction.cc  ExN03EventActionMessenger.cc~  ExN03PhysicsList.cc  ExN03PhysicsList.cc~  ExN03ROOTuple.cc  (+10 more)
(+40 files in other folders)
